--- a/app/src/main/res/menu/set_sound.xml
+++ b/app/src/main/res/menu/set_sound.xml
@@ -16,4 +16,9 @@
         android:title="@string/text_mnu_set_notification"
         />
 
+    <item
+        android:id="@+id/set_notification_app"
+        android:title="@string/text_mnu_set_notification_app"
+        />
+
 </menu>
