--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,14 +7,26 @@
             android:id="@+id/nav_main"
             android:title="@string/main"
             android:icon= "@drawable/ic_menu_main_icon"/>
-        <item
-            android:id="@+id/nav_email"
-            android:title="@string/email"
-            android:icon= "@drawable/ic_action_email" />
+
         <item
             android:id="@+id/nav_settings"
             android:title="@string/settings"
             android:icon= "@drawable/ic_menu_manage" />
+
     </group>
+
+    <item android:title="About">
+        <menu>
+            <item
+                android:id="@+id/nav_email"
+                android:title="@string/email"
+                android:icon= "@drawable/ic_action_email" />
+            <item
+                android:id="@+id/nav_privacy_policy"
+                android:title="@string/privacy_policy"
+                android:icon= "@drawable/ic_menu_privacy_policy" />
+        </menu>
+    </item>
+
 
 </menu>
