--- a/app/src/main/res/menu/main_leaderboards.xml
+++ b/app/src/main/res/menu/main_leaderboards.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <item android:id="@+id/action_sort"
+        android:title="@string/sort"
+        android:visible="true"
+        android:icon="@drawable/ic_sort"
+        app:showAsAction="withText|ifRoom" />
+
     <item android:id="@+id/action_filter"
         android:title="@string/filter"
         android:visible="true"
