--- a/app/src/main/res/layout/activity_tab_main.xml
+++ b/app/src/main/res/layout/activity_tab_main.xml
@@ -35,6 +35,12 @@
                 android:icon="@drawable/tab_sounds_selector"
                 android:text="@string/tab_sounds_text" />
 
+            <android.support.design.widget.TabItem
+                android:id="@+id/tabBulkItemExchange"
+                style="@style/TabItem"
+                android:icon="@drawable/tab_bulk_item_exchange_selector"
+                android:text="@string/tab_bulk_item_exchange_text" />
+
         </android.support.design.widget.TabLayout>
 
 
