--- a/app/src/main/res/layout/fragment_leaderboards.xml
+++ b/app/src/main/res/layout/fragment_leaderboards.xml
@@ -25,10 +25,10 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/filter" />
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFilter" />
 
             <android.support.constraint.ConstraintLayout
-                android:id="@+id/filter"
+                android:id="@+id/constraintLayoutFilter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
