--- a/app/src/main/res/layout/custom_image_loading.xml
+++ b/app/src/main/res/layout/custom_image_loading.xml
@@ -3,73 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_width="60dp"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="4dp"
-    android:layout_marginLeft="4dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginBottom="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardElevation="0dp">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageViewCurrency"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="4dp"
-            android:contentDescription="@string/currency_image"
-            app:layout_constraintBottom_toTopOf="@id/textViewCurrencyDescription"
+            android:background="@android:color/transparent"
+            android:contentDescription=""
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@id/textViewDescription"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/currency" />
+            app:srcCompat="@drawable/blank" />
 
         <ProgressBar
-            android:id="@+id/progressBarCurrency"
+            android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@id/textViewCurrencyDescription"
+            app:layout_constraintBottom_toTopOf="@id/textViewDescription"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewCurrencyDescription"
+            android:id="@+id/textViewDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
             android:maxEms="5"
             android:singleLine="false"
-            android:text="Currency Description"
+            android:text="Description"
             android:textAlignment="center"
             android:textSize="10sp"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageViewSelected"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:contentDescription="@string/currency_image"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_selected_currency" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
