--- a/app/src/main/res/layout/dialog_bulk_item_exchange_contact.xml
+++ b/app/src/main/res/layout/dialog_bulk_item_exchange_contact.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@android:string/copy"
+        android:text="@string/copy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
