--- a/app/src/main/res/layout/dialog_bulk_item_exchange_select_currency.xml
+++ b/app/src/main/res/layout/dialog_bulk_item_exchange_select_currency.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@android:string/ok" />
+        android:text="@string/ok" />
 
     <Button
         android:id="@+id/buttonClose"
@@ -30,7 +30,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@android:string/cancel" />
+        android:text="@string/cancel" />
 
     <Button
         android:id="@+id/buttonClear"
